--- a/contratos/templates/emails/alerta_vencimento.html
+++ b/contratos/templates/emails/alerta_vencimento.html
@@ -46,7 +46,7 @@
     <p><strong>Número do Contrato:</strong> {{ contrato.numero_contrato }}</p>
     <p><strong>Entidade:</strong> {{ contrato.entidade }}</p>
     <p><strong>Vencimento em:</strong> {{ vigencia.vigencia_atual|date:"d/m/Y" }}</p>
-    <p><strong>Dias restantes:</strong> {{ dias_restantes }}</p>
+    <p><strong>Dias restantes:</strong> {{ dias_restantes }} dias</p>
     <p>Este contrato está se aproximando da data de vencimento.</p>
   </div>
 
