--- a/pages/static/pages/home_styles/home.css
+++ b/pages/static/pages/home_styles/home.css
@@ -15,13 +15,29 @@
 }
 
 .services-list {
+  cursor: pointer;
   display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: "Roboto", sans-serif;
   gap: 50px;
   color: #00579b;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 500;
+}
+
+.services-item a {
+  color: inherit;
+  text-decoration: none;
+  display: block;
+}
+
+.services-item:hover {
+  background-color: #00579b;
+  color: white;
+  border-radius: 15px;
+  padding: 10px;
 }
 
 .utils {
@@ -32,7 +48,7 @@
   margin: 0px 40px;
 }
 
-.btn-login {
+.btn-user {
   font-family: "Roboto", sans-serif;
   cursor: pointer;
   border: none;
@@ -118,6 +134,22 @@ input:checked + .slider::before {
   width: 1100px;
 }
 
+.search-btn {
+  position: absolute;
+  top: 160px;
+  left: 1110px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #1b1b1b;
+  font-size: 20px;
+}
+
+.search-btn:hover{
+  color: #00579b;
+
+}
+
 .search-contract::placeholder {
   font-size: 16px;
 }
@@ -150,46 +182,76 @@ input[type="file"] {
   display: none;
 }
 
-.register-title{
-    font-family: 'roboto', sans-serif;
-    color: #004a88;
-    margin-bottom: 190px;
+.register-title {
+  font-family: "roboto", sans-serif;
+  color: #004a88;
 }
 
-.localizacao{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: start;
-    font-family: 'Roboto', sans-serif;
-    color: #f7f7f7;
-    margin: 20px 40px;
+.contracts-update {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.info{
-    color: #c7c7c7;
+.historical-contracts {
+  width: 1428px;
+  height: 350px;
+  border: 2px solid #004a88;
+  margin: 40px;
+  border-radius: 10px;
 }
 
-.info-item{
-    margin: 10px 0px;
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: #004a88;
+  height: 160px;
 }
 
-
-.footer{
-    width: 100%;
-    background-color: #004a88;
-    height: 160px;
+.localizacao {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+  color: #f7f7f7;
+  margin: 20px 40px;
 }
 
-.footer-info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #262626;
-    height:80px;
+.info {
+  color: #c7c7c7;
+  font-size: 15px;
 }
 
-.footer-info p{
-    color: #f7f7f7;
-    font-family: 'Roboto', sans-serif;
+.info-item {
+  margin: 10px 0px;
+}
+
+.line {
+  width: 2px;
+  height: 120px;
+  background-color: #f7f7f7;
+  margin: 0px 40px;
+}
+
+.logo_footer {
+  width: 240px;
+  margin: 0px 40px;
+}
+
+.footer-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #262626;
+  height: 80px;
+}
+
+.footer-info p {
+  color: #f7f7f7;
+  font-family: "Roboto", sans-serif;
 }
