--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -23,7 +23,9 @@
 
         <div>
           <ul class="services-list">
-            <li class="services-item">Contratos</li>
+            <li class="services-item">
+              <a href="{% url 'contracts' %}">Contratos</a>
+            </li>
             <spam>|</spam>
             <li class="services-item">
               <a href="{% url 'update_contracts' %}">Atualizar Contratos</a>
