--- a/pages/static/pages/display of contracts/contracts.css
+++ b/pages/static/pages/display of contracts/contracts.css
@@ -121,6 +121,7 @@ input:checked + .slider::before {
   background-color: #00579b;
   height: 100px;
   margin-top: 80px;
+  width: 100%;
 }
 
 .profile-title h1, .profile-title
@@ -143,82 +144,21 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: #f7f7f7;
   height: 100%;
 }
 
-.container-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 40px 40px;
-}
-
-.edit-contracts {
-  width: 1000px;
-  height: 600px;
-  background-color: aliceblue;
-  border: 1px solid #00589b30;
-  border-radius: 10px;
-}
-
-.contract-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 15px;
-  font-family: 'Roboto', sans-serif;
-  color: #262626;
-}
-
-.contracts-list {
-  width: 400px;
-  height: 600px;
-  background-color: aliceblue;
-  border: 1px solid #00589b30;
-  border-radius: 10px;
+.container-contract{
   display: flex;
   justify-content: center;
-  align-items: start;
-}
-
-.field-search{
-  margin: 15px;
-  display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 15px;
-}
-
-.search-contract {
+  width: 95%;
+  height: 900px;
+  background-color: aliceblue;
+  margin: 40px;
   border-radius: 10px;
   border: 1px solid #004a88;
-  font-family: "Roboto", sans-serif;
-  padding: 20px 10px;
-  color: #00579b;
-  font-size: 15px;
-  width: 300px;
-
-}
-
-.search-btn {
-  background-color: #f7f7f7;
-  padding: 18px;
-  cursor: pointer;
-  font-size: 18px;
-  color: #00579b;
-  border-radius: 10px;
-  border: 1px solid #00579b;
-}
-
-.search-btn:hover{
-  background-color: #00579b;
-  color: #f7f7f7;
-
-}
-
-.search-contract::placeholder {
-  font-size: 16px;
 }
 
 .footer {
