feat(contracts): conexão bem-sucedida com o banco de dados e início da estilização dos dados obtidos

--- a/pages/static/css/contracts.css
+++ b/pages/static/css/contracts.css
@@ -39,12 +39,76 @@
   border-radius: 15px;
   padding: 10px;
 }
+
 .services-item:hover,
 .services-item.active {
   background-color: #00579b;
   color: white;
   border-radius: 15px;
   padding: 10px;
+}
+
+.modal-container {
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  background-color: aliceblue;
+  position: absolute;
+  left: 950px;
+  height: 300px;
+  width: 300px;
+  top: 10px;
+  box-shadow: 0px 0px 10px #1b1b1b40;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  color: #00579b;
+  display: none;
+}
+
+.notifications {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  color: #262626;
+  font-size: 15px;
+  margin: 25px;
+}
+
+.notifications li {
+  margin: 0px 0px 25px 0px;
+}
+
+.notifications li:hover {
+  color: #00579b;
+  font-size: 25px;
+}
+
+.modal-itens {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #1b1b1b40;
+}
+
+.modal-container h3 {
+  margin: 20px;
+}
+
+.close-modal {
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  border: none;
+  background-color: #00579b;
+  color: aliceblue;
+  padding: 10px 30px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+.close-modal:hover {
+  box-shadow: 0px 0px 3px #262626;
 }
 
 .utils {
@@ -197,8 +261,8 @@ a {
 }
 
 .logo_footer {
-  width: 240px;
-  margin: 0px 40px;
+  width: 150px;
+  margin: 0px 100px 0px 40px;
 }
 
 .footer-info {
