--- a/pages/static/css/updateContracts-styles.css
+++ b/pages/static/css/updateContracts-styles.css
@@ -40,6 +40,77 @@
   padding: 10px;
 }
 
+.services-item:hover,
+.services-item.active {
+  background-color: #00579b;
+  color: white;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.modal-container {
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  background-color: aliceblue;
+  position: absolute;
+  left: 950px;
+  height: 300px;
+  width: 300px;
+  top: 10px;
+  box-shadow: 0px 0px 10px #1b1b1b40;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  color: #00579b;
+  display: none;
+}
+
+.notifications {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  color: #262626;
+  font-size: 15px;
+  margin: 25px;
+}
+
+.notifications li {
+  margin: 0px 0px 25px 0px;
+}
+
+.notifications li:hover {
+  color: #00579b;
+  font-size: 25px;
+}
+
+.modal-itens {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #1b1b1b40;
+}
+
+.modal-container h3 {
+  margin: 20px;
+}
+
+.close-modal {
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  border: none;
+  background-color: #00579b;
+  color: aliceblue;
+  padding: 10px 30px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+.close-modal:hover {
+  box-shadow: 0px 0px 3px #262626;
+}
+
 .utils {
   display: flex;
   justify-content: center;
@@ -47,6 +118,18 @@
   gap: 20px;
   margin: 0px 40px;
 }
+
+.btn-user {
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  border: none;
+  background-color: #00579b;
+  color: aliceblue;
+  padding: 10px 30px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
 
 .switch {
   position: relative;
@@ -104,8 +187,8 @@ input:checked + .slider::before {
   margin-top: 80px;
 }
 
-.profile-title h1,
-.profile-title a {
+.profile-title h1, .profile-title
+a {
   margin: 20px 40px;
 }
 
@@ -128,100 +211,78 @@ input:checked + .slider::before {
   height: 100%;
 }
 
-.personal-info {
+.container-list {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  width: 100%;
+  justify-content: space-between;
+  margin: 40px 40px;
 }
 
-.divisor {
-  background-color: #00589b30;
-  height: 425px;
-  width: 1px;
-}
-
-.account {
-  display: flex;
-}
-
-.registers {
-  margin: 50px;
-}
-
-.registers spam {
-  padding: 6px 2px;
-  font-family: "Roboto", sans-serif;
-  color: #00579b;
-  font-size: 20px;
-}
-
-.register-bar {
-  padding: 20px 300px 20px 20px;
+.edit-contracts {
+  width: 1000px;
+  height: 600px;
   background-color: aliceblue;
-  margin-bottom: 30px;
+  border: 1px solid #00589b30;
   border-radius: 10px;
-  box-shadow: 0px 0px 5px #00000020;
-  font-family: "Roboto", sans-serif;
 }
 
-.photo {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background-color: #00579b;
+.contract-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  color: #262626;
+  margin: 15px;
 }
 
-.account {
+.contracts-list {
+  width: 400px;
+  height: 600px;
+  background-color: aliceblue;
+  border: 1px solid #00589b30;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 
-.account-profile {
+.field-search{
+  margin: 15px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.search-contract {
+  border-radius: 10px;
+  border: 1px solid #004a88;
   font-family: "Roboto", sans-serif;
-  margin: 40px;
+  padding: 20px 10px;
   color: #00579b;
+  font-size: 15px;
+  width: 300px;
+
 }
 
-.account-profile h2 {
-  margin-bottom: 30px;
-}
-
-.btn-edit {
-  font-family: "Roboto", sans-serif;
+.search-btn {
+  background-color: #f7f7f7;
+  padding: 18px;
+  cursor: pointer;
+  font-size: 18px;
+  color: #00579b;
   border-radius: 10px;
-  border: none;
+  border: 1px solid #00579b;
+}
+
+.search-btn:hover{
   background-color: #00579b;
   color: #f7f7f7;
-  padding: 10px 20px;
-  font-size: 15px;
-  cursor: pointer;
+
 }
 
-.btn-logout {
-  font-family: "Roboto", sans-serif;
-  border-radius: 10px;
-  border: none;
-  background-color: #bc0000;
-  color: #f7f7f7;
-  padding: 10px 20px;
-  font-size: 15px;
-  cursor: pointer;
-  margin-top: 20px;
-}
-
-.photo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.photo img {
-  width: 180px;
-  padding-bottom: 10px;
+.search-contract::placeholder {
+  font-size: 16px;
 }
 
 .footer {
