--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -5,8 +5,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'pages/global.css' %}" />
-    <link rel="stylesheet" href="{% static 'pages/home_styles\home.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/home.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Licita Facil</title>
   </head>
@@ -15,7 +15,7 @@
       <nav class="navigation">
         <img
           class="logo_JF"
-          src="{% static 'img/JF_logo.png' %}"
+          src="{% static 'assets/Logo-j-Federal.png' %}"
           alt="Logo da Justiça federal"
         />
 
@@ -29,20 +29,19 @@
               <a href="{% url 'update_contracts' %}">Atualizar Contratos</a>
             </li>
             <spam>|</spam>
-            <li class="services-item" id="notificationBtn">Notificaçôes</li>
-            <div id="notificationModal" class="modal hidden">
-              <div class="modal-content">
-                <h2>Notificações</h2>
-                <ul class="notification-list">
-                  <li>Contrato 245 atualizado com sucesso.</li>
-                  <li>Contrato 103 está prestes a vencer.</li>
-                  <li>Nova mensagem do setor jurídico.</li>
-                </ul>
-                <a href="#" class="see-all">Ver todas as notificações</a>
-                <button class="close-modal">&times;</button>
-              </div>
-            </div>
+            <li class="services-item notification"><spam>Notificações</spam></li>
           </ul>
+          <div class="modal-container">
+            <h3>Notificações</h3>
+
+            <div class="modal-itens">
+              <ul class="notifications">
+                <li>Contratos a vencer</li>
+                <li>Contratos vencidos</li>
+              </ul>
+            </div>
+            <button class='close-modal'>Fechar</button>
+          </div>
         </div>
 
         <div class="utils">
@@ -58,8 +57,9 @@
 
     <main class="content">
       <div class="contracts">
-        <input class="search-contract" type="text" name="search" placeholder="Informe o número ou nome do contrato"></input>
+        <input class="search-contract" type="text" name="search" placeholder="Informe o número ou nome do contrato">
         <button class="search-btn"><i class="fas fa-search"></i></button>
+      </input>
 
         <div class="upload-container">
           <form action="/upload" method="post" enctype="multipart/form-data">
@@ -95,13 +95,14 @@
 
         <img
           class="logo_footer"
-          src="{% static 'img/JF_logo.png' %}"
+          src="{% static 'assets/JF_logo-md.png' %}"
           alt="Logo da Justiça federal"
         />
       </div>
     </main>
     
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script type="module" src="{% static 'js/scripts.js' %}"></script>
+
   </body>
   <footer class="footer-info">
     <p>&copy; <strong>2025 SJGO</strong> •Todos os direitos reservadoos•</p>
