--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -5,10 +5,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static 'pages/global.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
     <link
       rel="stylesheet"
-      href="{% static 'pages\profile_styles\profile.css' %}"
+      href="{% static 'css/profile.css' %}"
     />
     <title>Perfil do Usuário</title>
   </head>
@@ -17,7 +17,7 @@
       <nav class="navigation">
         <img
           class="logo_JF"
-          src="{% static 'img/JF_logo.png' %}"
+          src="{% static 'assets/Logo-j-Federal.png' %}"
           alt="Logo da Justiça federal"
         />
 
@@ -31,8 +31,19 @@
               <a href="{% url 'update_contracts' %}">Atualizar Contratos</a>
             </li>
             <spam>|</spam>
-            <li class="services-item">Notificaçôes</li>
+            <li class="services-item notification">Notificaçôes</li>
           </ul>
+          <div class="modal-container">
+            <h3>Notificações</h3>
+
+            <div class="modal-itens">
+              <ul class="notifications">
+                <li>Contratos a vencer</li>
+                <li>Contratos vencidos</li>
+              </ul>
+            </div>
+            <button class='close-modal'>Fechar</button>
+          </div>
         </div>
 
         <div class="utils">
@@ -116,7 +127,7 @@
 
         <img
           class="logo_footer"
-          src="{% static 'img/JF_logo.png' %}"
+          src="{% static 'assets/JF_logo-md.png' %}"
           alt="Logo da Justiça federal"
         />
       </div>
@@ -124,5 +135,8 @@
     <footer class="footer-info">
       <p>&copy; <strong>2025 SJGO</strong> •Todos os direitos reservadoos•</p>
     </footer>
+
+    <script type="module" src="{% static 'js/scripts.js' %}"></script>
+
   </body>
 </html>
