--- a/pages/templates/pages/updateContracts.html
+++ b/pages/templates/pages/updateContracts.html
@@ -5,8 +5,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static 'pages/global.css' %}" />
-    <link rel="stylesheet" href="{% static 'pages\updateContracts-styles\updateContracts-styles.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/updateContracts-styles.css' %}"/>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Atualizar Contratos</title>
   </head>
@@ -15,7 +15,7 @@
       <nav class="navigation">
         <img
           class="logo_JF"
-          src="{% static 'img/JF_logo.png' %}"
+          src="{% static 'assets/Logo-j-Federal.png' %}"
           alt="Logo da Justiça federal"
         />
 
@@ -27,8 +27,20 @@
             <spam>|</spam>
             <li class="services-item active">Atualizar Contratos</li>
             <spam>|</spam>
-            <li class="services-item">Notificaçôes</li>
+            <li class="services-item notification">Notificaçôes</li>
           </ul>
+
+          <div class="modal-container">
+            <h3>Notificações</h3>
+
+            <div class="modal-itens">
+              <ul class="notifications">
+                <li>Contratos a vencer</li>
+                <li>Contratos vencidos</li>
+              </ul>
+            </div>
+            <button class='close-modal'>Fechar</button>
+          </div>
         </div>
 
         <div class="utils">
@@ -92,7 +104,7 @@
 
         <img
           class="logo_footer"
-          src="{% static 'img/JF_logo.png' %}"
+          src="{% static 'assets/JF_logo-md.png' %}"
           alt="Logo da Justiça federal"
         />
       </div>
@@ -100,5 +112,8 @@
     <footer class="footer-info">
       <p>&copy; <strong>2025 SJGO</strong> •Todos os direitos reservadoos•</p>
     </footer>
+
+    <script type="module" src="{% static 'js/scripts.js' %}"></script>
+
   </body>
 </html>
