--- a/pages/templates/pages/contracts.html
+++ b/pages/templates/pages/contracts.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/global.css' %}" />
     <link rel="stylesheet" href="{% static 'css/contracts.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Licita Facil</title>
+    <title>Gestão Fácil</title>
   </head>
   <body>
     <header>
@@ -27,7 +27,7 @@
               <a href="{% url 'update_contracts' %}">Atualizar Contratos</a>
             </li>
             <spam>|</spam>
-            <li class="services-item notification">Notificaçôes</li>
+            <li class="services-item notification">Notificações</li>
           </ul>
 
           <div class="modal-container">
@@ -55,31 +55,66 @@
     </header>
 
     <main class="content">
-      <div class="profile-title">
-        <h1>Visualizar contratos</h1>
-        <a class="go-home" href="{% url 'home' %}">Voltar para a Home</a>
-      </div>
-
       <div class="container-contract">
+        <div class="contract-labels">
+            <p><strong>Nº do Contrato</strong></p>
+            <p><strong>Contratada</strong></p>
+            <p><strong>Objeto</strong></p>
+            <p><strong>CPF/CNPJ</strong></p>
+            <p><strong>Gestor</strong></p>
+            <p><strong>Valor Atualizado</strong></p>
+            <p><strong>Status</strong></p>
+            <p><strong>Vigência Atual</strong></p>
+            <p><strong>Vigência Máxima</strong></p>
+          </div>
         {% for contrato in page_obj %}
-
           <div class="contract-card">
-            <h3>{{ contrato.numero_contrato }} - {{ contrato.entidade }}</h2>
-            <p class='width'><strong>Objeto:</strong> {{ contrato.objeto }}</p>
-            <p class='width'><strong>CNPJ/CPF:</strong> {{ contrato.cnpj_cpf }}</p>
-            <p class='width'><strong>Valor Atualizado:</strong> R$ {{ contrato.valor_atualizado}}</p>
-            <p><strong>Status:</strong> {{ contrato.get_status_display }}</p>
+            <p>{{ contrato.numero_contrato }}</p>
+            <p>{{ contrato.entidade }}</p>
+            <p>{{ contrato.objeto }}</p>
+            <p>{{ contrato.cnpj_cpf }}</p>
+            {% with contrato.gestor_set.first as gestor %}
+              <p>{{ gestor.nome }}</p>
+            {% endwith %}
+            <p>R$ {{ contrato.valor_atualizado}}</p>
+            <p>{{ contrato.get_status_display }}</p>
+
 
             {% with contrato.vigencia_set.first as vigencia %}
               {% if vigencia %}
-                <p class='width'><strong>Vigência Atual:</strong> {{ vigencia.vigencia_atual }}</p>
-                <p><strong>Vigência Máxima:</strong> {{ vigencia.vigencia_max }}</p>
+                <p>{{ vigencia.vigencia_atual }}</p>
+                <p>{{ vigencia.vigencia_max }}</p>
               {% else %}
                 <p><em>Vigência não informada.</em></p>
               {% endif %}
             {% endwith %}
-          </div>
+            <span class="edit-icon" title="Editar Contrato">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil-icon lucide-pencil"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/><path d="m15 5 4 4"/></svg>
+            </span>
+            <div class="contract-edit">
+              <div class="contract-edit-top">
+                <h3>Editar Contrato</h3>
+                <button class="close-contract-edit">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x-icon lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+                </button>
+              </div>
+              <form action="" method="POST" class="contract-form">
+                {% csrf_token %}
 
+                <div class="contract-form-card">
+                  <label for="numero-contrato">Nº do Contrato</label>
+                  <p id="numero-contrato" name="numero-contrato">{{ contrato.numero_contrato }}</p>
+                  <span class="cant-edit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-x-icon lucide-circle-x"><circle cx="12" cy="12" r="10"/><path d="m15 9-6 6"/><path d="m9 9 6 6"/></svg>
+                    <p>Essa informação não pode ser modificada</p>
+                  </span>
+                </div>
+
+              </form>
+              <button class="cancel-changes">Cancelar</button>
+              <button class="save-contract">Salvar Alterações</button>
+            </div>
+          </div>
         {% empty %}
           <p>Nenhum contrato encontrado.</p>
         {% endfor %}
@@ -106,40 +141,6 @@
           </a>
         {% endif %}
       </div>
-
-      <div class="footer">
-        <div class="localizacao">
-          <h2>Rua 19, nº 244, Centro</h2>
-
-          <ul class="info">
-            <li class="info-item">
-              <strong>CEP:</strong> 74030-090 Goiânia/GO
-            </li>
-            <li class="info-item"><strong>Telefone:</strong> (62) 3226-1500</li>
-            <li class="info-item"><strong>CNPJ:</strong> 05.439.950/0001-30</li>
-          </ul>
-        </div>
-
-        <div class="line"></div>
-
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d244622.50368607216!2d-49.53920458466345!3d-16.665539375156392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x935ef17cabdf4161%3A0xc5a966b9b525c720!2sJusti%C3%A7a%20Federal%20-%20R.%2019%2C%20244%20-%20St.%20Central%2C%20Goi%C3%A2nia%20-%20GO%2C%2074030-090!3m2!1d-16.6779242!2d-49.253507199999994!5e0!3m2!1spt-PT!2sbr!4v1753813672968!5m2!1spt-PT!2sbr"
-          width="440"
-          height="124"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-
-        <div class="line"></div>
-
-        <img
-          class="logo_footer"
-          src="{% static 'assets/JF_logo-md.png' %}"
-          alt="Logo da Justiça federal"
-        />
-      </div>
     </main>
 
     <footer class="footer-info">
@@ -147,5 +148,6 @@
     </footer>
 
     <script type="module" src="{% static 'js/scripts.js' %}"></script>
+    <script type="module" src="{% static 'js/contractEdit.js' %}""></script>
   </body>
 </html>
