--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/global.css' %}" />
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Licita Facil</title>
+    <title>Gestão Fácil</title>
   </head>
   <body>
     <header>
