--- a/pages/static/css/home.css
+++ b/pages/static/css/home.css
@@ -14,6 +14,33 @@
   width: 218px;
 }
 
+.upload-container {
+  text-align: center;
+}
+
+.upload-label {
+  display: flex;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  color: #00579b;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  text-transform: none;
+  border: none;
+  transform: background-color 0.3s;
+}
+
+.upload-label:hover {
+  background-color: #004a88;
+  color: #f7f7f7;
+}
+
+input[type="file"] {
+  display: none;
+}
+
 .services-list {
   cursor: pointer;
   display: flex;
@@ -107,8 +134,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  margin: 0px 40px;
+  margin: 0px 60px;
 }
 
 .btn-user {
@@ -122,51 +148,6 @@
   font-size: 15px;
 }
 
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 70px;
-  height: 40px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #c7c7c7;
-  transition: 0.4s;
-  border-radius: 40px;
-}
-
-.slider::before {
-  position: absolute;
-  content: "";
-  height: 30px;
-  width: 30px;
-  left: 5px;
-  bottom: 5px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #00579b;
-}
-
-input:checked + .slider::before {
-  transform: translateX(30px);
-}
-
 .content {
   display: flex;
   align-items: center;
@@ -174,32 +155,40 @@ input:checked + .slider::before {
   flex-direction: column;
   background-color: #f7f7f7;
   height: 100%;
+  width: 100%;
 }
 
 .contracts {
   display: flex;
+  justify-content: start;
   background-color: aliceblue;
   padding: 20px;
-  gap: 20px;
-  margin: 120px 20px 40px 20px;
+  margin: 120px 40px 40px 40px;
   border-radius: 10px;
   border: 1px solid #00589b30;
+  width: 95%;
+}
+
+.form-input {
+  display: flex;
+  width: 100%;
+  max-width: 1700px;
+  gap: 10px;
 }
 
 .search-contract {
   border-radius: 10px;
   border: none;
   font-family: "Roboto", sans-serif;
-  padding: 0px 10px;
+  padding: 20px;
   color: #00579b;
-  height: 60px;
   font-size: 15px;
-  width: 1100px;
+  width: 100%;
 }
 
 .search-btn {
   top: 160px;
-  left: 1110px;
+  left: 93%;
   background: none;
   border: none;
   cursor: pointer;
@@ -209,44 +198,46 @@ input:checked + .slider::before {
 }
 
 .search-btn:hover {
-  color: #00579b;
+  color: #f7f7f7;
+  background-color: #00579b;
+  padding: 13px 15px;
+  border-radius: 50%;
+  top: 146px;
+  left: 92%;
 }
 
 .search-contract::placeholder {
   font-size: 16px;
 }
 
-.upload-container {
-  text-align: center;
+.search-result-title{
+  margin: 10px;
 }
 
-.upload-label {
+.container-contract-filtered{
+  border: 1px solid #00589b30;
+  font-family: "Roboto", sans-serif;
+  width: 95%;
+  background-color: aliceblue;
+  margin-bottom: 40px;
+}
+
+.contract-card-filtered{
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  background-color: #00579b;
   font-family: "Roboto", sans-serif;
   font-size: 15px;
-  color: #f7f7f7;
-  padding: 10px 65px;
-  border-radius: 10px;
-  cursor: pointer;
-  text-transform: none;
-  border: none;
-  transform: background-color 0.3s;
-  height: 60px;
+  gap: 30px;
+  border-bottom: 1px solid #00589b30;
+  border-top: 1px solid #00589b30;
+  padding: 10px;
 }
 
-.upload-label:hover {
-  background-color: #004a88;
-}
-
-input[type="file"] {
-  display: none;
-}
-
-.register-title {
+.contracts-title {
   font-family: "roboto", sans-serif;
   color: #004a88;
+  text-transform: uppercase;
 }
 
 .contracts-update {
@@ -257,72 +248,64 @@ input[type="file"] {
   flex-direction: column;
 }
 
-.historical-contracts {
+.container-contract {
   display: flex;
   justify-content: center;
-  align-items: space-between;
+  align-items: center;
   flex-direction: column;
-  width: 96%;
-  border: 1px solid #004a88;
-  margin: 40px;
   background-color: aliceblue;
+  margin: 40px;
+  width: 95%;
+  border: 1px solid #00589b30;
 }
 
-.contract-item{
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  font-family: 'Robot', sans-serif;
-  padding: 10px;
-  border-bottom: 1px solid black;
-}
-
-.width{
-  width: 400px;
-}
-
-.end{
-  padding-left: 200px;
-}
-
-.footer {
-  width: 100%;
+.contract-card {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  background-color: #004a88;
-  height: 160px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  border-bottom: 1px solid #00589b30;
+  padding: 10px;
+  gap: 30px;
 }
 
-.localizacao {
+.contract-card h3 {
+  width: 200px;
+}
+
+.width {
+  width: 200px;
+}
+
+.pagination {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
   font-family: "Roboto", sans-serif;
-  color: #f7f7f7;
-  margin: 20px 40px;
+  margin-bottom: 30px;
+  font-weight: 600;
+  gap: 15px;
 }
 
-.info {
-  color: #c7c7c7;
+.pagination a {
+  background-color: #00579b;
+  padding: 10px;
+  border-radius: 10px;
   font-size: 15px;
+  color: #f7f7f7;
 }
 
-.info-item {
-  margin: 10px 0px;
-}
-
-.line {
-  width: 2px;
-  height: 120px;
+.btn-go:hover{
+  color: #00579b;
   background-color: #f7f7f7;
-  margin: 0px 40px;
+  border: 1px solid #00579b;
 }
 
-.logo_footer {
-  width: 150px;
-  margin: 0px 100px 0px 40px;
+.pagination a:hover {
+  color: #00579b;
+  background-color: #f7f7f7;
+  border: 1px solid #00579b;
 }
 
 .footer-info {
