--- a/pages/static/css/updateContracts-styles.css
+++ b/pages/static/css/updateContracts-styles.css
@@ -14,6 +14,33 @@
   width: 218px;
 }
 
+.upload-container {
+  text-align: center;
+}
+
+.upload-label {
+  display: flex;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  color: #00579b;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  text-transform: none;
+  border: none;
+  transform: background-color 0.3s;
+}
+
+.upload-label:hover {
+  background-color: #004a88;
+  color: #f7f7f7;
+}
+
+input[type="file"] {
+  display: none;
+}
+
 .services-list {
   cursor: pointer;
   display: flex;
@@ -116,7 +143,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin: 0px 40px;
+  margin: 0px 60px;
 }
 
 .btn-user {
@@ -128,52 +155,6 @@
   padding: 10px 30px;
   border-radius: 10px;
   font-size: 15px;
-}
-
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 70px;
-  height: 40px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #c7c7c7;
-  transition: 0.4s;
-  border-radius: 40px;
-}
-
-.slider::before {
-  position: absolute;
-  content: "";
-  height: 30px;
-  width: 30px;
-  left: 5px;
-  bottom: 5px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #00579b;
-}
-
-input:checked + .slider::before {
-  transform: translateX(30px);
 }
 
 .profile-title {
